tests/machine/x/fortran/string_index.f90
program main
  implicit none
  integer :: s
  s = "mochi"
  print *, s(1)
end program main
